--- a/views/profile.html
+++ b/views/profile.html
@@ -24,6 +24,7 @@
     <div class="row">
         <div class="col-md-12">
             <button id="displayUser" > Click to see your userID</button>
+            <button id="logout">Logout</button>
         </div>
     </div>
 </div>
