better profile ux

--- a/views/profile.html
+++ b/views/profile.html
@@ -11,23 +11,67 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 class="display-4">Schedule</h1>
-          <p class="lead">Welcome to the scheduling app</p>
+    <nav class="navbar navbar-expand-lg navbar-light navb mb-0 pl-2 pb-1 pt-1">
+        <a class="navbar-brand ml-0 mt-0 mb-0" id="username" style="color: white; font-size: 25px" href=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" style="color: white" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a style="color: white" class="nav-link" href="#">Link</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            <button class="btn btn-outline-light border-light ml-2" id="logout">Logout</button>
         </div>
-      </div>
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <button id="displayUser" > Click to see your userID</button>
-            <button id="logout">Logout</button>
+    </nav>
+
+    <div class="container-fluid jumbo  mb-2">
+        <div class="row">
+            <div class="col-6 ">
+                <div class="jumbotron jumbotron-fluid text-center rounded innerJumbo p-4 mt-5 mb-5 ml-3 " id="months">
+                    <div class="container userFade ">
+                        <h1 class="display-4 font-weight-bold   ">Months</h1>
+                        <button class="btn btn-light">Create/Update Schedule</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 ">
+                <div class="jumbotron jumbotron-fluid text-center rounded innerJumbo p-4 mt-5 mb-5 mr-3 " id="employees">
+                    <div class="container userFade ">
+                        <h1 class="display-4 font-weight-bold">Employees</h1>
+                        <button class="btn btn-light">Employee Dashboard </button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 mb-5 text-center">
+
+            </div>
         </div>
     </div>
-</div>
-<script src="js/main.js" type="text/javascript" ></script>
+    </div>
+
+    <div class="container">
+
+    </div>
+    <script src="js/main.js" type="text/javascript"></script>
 </body>
+
 </html>
