--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,8 +1,16 @@
+body {
+    background-color: #FFB72B;
+}
 .jumbo {
-    background: #FFB72B; 
+    background: #3567D1; 
     color: white;
     font-family: 'Roboto', sans-serif;
-    width: 100%
+    width: 100%; 
+    height: 100%;
+}
+
+.homeContainer {
+    background-color: #3567D1; 
 }
 
 .container-fluid {
